--- a/style.css
+++ b/style.css
@@ -3,7 +3,7 @@ Theme Name: Aphelion Child
 Description: Child theme for Aphelion theme
 Author: WebData Oy
 Author URI: https://webdata.fi/
-Template: aphelion
+Template: aphelion-lite
 Version: 1.0.0
 Text Domain: aphelion
 */
